--- a/portfolio.html
+++ b/portfolio.html
@@ -13,33 +13,33 @@
   <body>
     <!-- header -->
     <header> 
-      <div class="header-conteiner">
-        <nav class="nav-conteiner">
-          <a class="main-logo" href="./index.html">
-            <span class="logo">Web<span class="studio-top">Studio</span></span>
+      <div class="header__conteiner">
+        <nav class="nav__conteiner">
+          <a class="main__logo" href="./index.html">
+            <span class="logo">Web<span class="studio--top">Studio</span></span>
           </a>
         
           <!-- site-nav -->
           <ul class="site-nav">
-            <li class="site-nav_item"><a class="nav-link" href="./index.html">Студия</a></li>
-            <li class="site-nav_item"><a class="nav-link current" href="./portfolio.html">Портфолио</a></li>
-            <li class="site-nav_item"><a class="nav-link" href="">Контакты</a></li>
+            <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Студия</a></li>
+            <li class="site-nav__item"><a class="site-nav__link current" href="./portfolio.html">Портфолио</a></li>
+            <li class="site-nav__item"><a class="site-nav__link" href="">Контакты</a></li>
           </ul>
         </nav>
         
         <!-- site-contact -->
-        <ul class="site-contact">
-          <li class="site-contact_list">
-            <a class="contact-link" href="mailto:info@devstudio.com">
-              <svg width="16" height="10" class="site-contact-icons">
+        <ul class="site-contact__list">
+          <li class="site-contact__item">
+            <a class="contact__link" href="mailto:info@devstudio.com">
+              <svg width="16" height="10" class="site-contact__icons">
                 <use href="./Images/icons/symbol-defs.svg#icon-leter-hover"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="site-contact_list contact-icons">
-            <a class="contact-link" href="tell:+380961111111">
-              <svg width="10" height="16" class="site-contact-icons">
+          <li class="site-contact__item contact-icons">
+            <a class="contact__link" href="tell:+380961111111">
+              <svg width="10" height="16" class="site-contact__icons">
                 <use href="./Images/icons/symbol-defs.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -51,111 +51,111 @@
     <!-- main -->
     <main>
       <!-- choice section -->
-      <section class="choice-section">
+      <section class="choice__section">
         <h1 class="title visually-hidden">Веб студия секция вибора</h1>
-        <div class="choice-section_conteiner">
+        <div class="choice__conteiner">
           <ul class="button-list">
-            <li class="button-list_item">
-              <button class="filter-button" type="button">Все</button>
+            <li class="button-list__item">
+              <button class="filter__button" type="button">Все</button>
             </li>
-            <li class="button-list_item">
-              <button class="filter-button" type="button">Веб-сайты</button>
+            <li class="button-list__item">
+              <button class="filter__button" type="button">Веб-сайты</button>
             </li>
-            <li class="button-list_item">
-              <button class="filter-button" type="button">Приложения</button>
+            <li class="button-list__item">
+              <button class="filter__button" type="button">Приложения</button>
             </li>
-            <li class="button-list_item">
-              <button class="filter-button" type="button">Дизайн</button>
+            <li class="button-list__item">
+              <button class="filter__button" type="button">Дизайн</button>
             </li>
-            <li class="button-list_item">
-              <button class="filter-button" type="button">Маркетинг</button>
+            <li class="button-list__item">
+              <button class="filter__button" type="button">Маркетинг</button>
             </li>
           </ul>
           <ul class="options-list">
-            <li class="option-list_items">
-              <a class="option-list_items-link" href="">
-                <div class="image-conteiner">
+            <li class="__items">
+              <a class="option-list__link" href="">
+                <div class="image__conteiner">
                   <img class="image" src="./Images/laptop-tech-kryak.jpg" alt="laptop tech kryak" />
-                  <div class="option-list-text">
+                  <div class="option-list__text">
                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.
                   </div>
                 </div>
-                <div class="option-description">
-                  <h2 class="option-title title">Технокряк</h2>
-                  <p class="option-text text">Веб-сайт</p>
+                <div class="option__description">
+                  <h2 class="option__title title">Технокряк</h2>
+                  <p class="option__text text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="option-list_items">
-              <a class="option-list_items-link" href="">
+            <li class="option-list__items">
+              <a class="option-list__link" href="">
                 <img class="image" src="./Images/poster-orlean.jpg" alt="poster orlean" />
-                <div class="option-description">
-                  <h2 class="option-title title">Постер New Orlean vs Golden</h2>
-                  <p class="option-text text">Дизайн</p>
+                <div class="option__description">
+                  <h2 class="option__title title">Постер New Orlean vs Golden</h2>
+                  <p class="option__text text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="option-list_items">
-              <a class="option-list_items-link" href="">
+            <li class="option-list__items">
+              <a class="option-list__link" href="">
                 <img class="image" src="./Images/restorant-seafood.jpg" alt="restorant seafood" />
-                <div class="option-description">
-                  <h2 class="option-title title">Ресторан Seafood</h2>
-                  <p class="option-text text">Приложение</p>
+                <div class="option__description">
+                  <h2 class="option__title title">Ресторан Seafood</h2>
+                  <p class="option__text text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="option-list_items">
-              <a class="option-list_items-link" href="">
+            <li class="option-list__items">
+              <a class="option-list__link" href="">
                 <img class="image" src="./Images/headphones-prime.jpg" alt="headphones prime" />
-                <div class="option-description">
-                  <h2 class="option-title title">Проект Prime</h2>
-                  <p class="option-text text">Маркетинг</p>
+                <div class="option__description">
+                  <h2 class="option__title title">Проект Prime</h2>
+                  <p class="option__text text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="option-list_items">
-              <a class="option-list_items-link" href="">
+            <li class="option-list__items">
+              <a class="option-list__link" href="">
                 <img class="image" src="./Images/boxes.jpg" alt="boxes" />
-                <div class="option-description">
-                  <h2 class="option-title title">Проект Boxes</h2>
-                  <p class="option-text text">Приложение</p>
+                <div class="option__description">
+                  <h2 class="option__title title">Проект Boxes</h2>
+                  <p class="option__text text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="option-list_items">
-              <a class="option-list_items-link" href="">
+            <li class="option-list__items">
+              <a class="option-list__link" href="">
                 <img class="image" src="./Images/monitor.jpg" alt="monitor" />
-                <div class="option-description">
-                  <h2 class="option-title title">Inspiration has no Borders</h2>
-                  <p class="option-text text">Веб-сайт</p>
+                <div class="option__description">
+                  <h2 class="option__title title">Inspiration has no Borders</h2>
+                  <p class="option__text text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="option-list_items">
-              <a class="option-list_items-link" href="">
+            <li class="option-list__items">
+              <a class="option-list__link" href="">
                 <img class="image" src="./Images/book.jpg" alt="book" />
-                <div class="option-description">
-                  <h2 class="option-title title">Издание Limited Edition</h2>
-                  <p class="option-text text">Дизайн</p>
+                <div class="option__description">
+                  <h2 class="option__title title">Издание Limited Edition</h2>
+                  <p class="option__text text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="option-list_items">
-              <a class="option-list_items-link" href="">
+            <li class="option-list__items">
+              <a class="option-list__link" href="">
                 <img class="image" src="./Images/stiker-lab.jpg" alt="stiker lab" />
-                <div class="option-description">
-                  <h2 class="option-title title">Проект LAB</h2>
-                  <p class="option-text text">Маркетинг</p>
+                <div class="option__description">
+                  <h2 class="option__title title">Проект LAB</h2>
+                  <p class="option__text text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="option-list_items">
-              <a class="option-list_items-link" href="">
+            <li class="option-list__items">
+              <a class="option-list__link" href="">
                 <img class="image" src="./Images/laptop.jpg" alt="laptop" />
-                <div class="option-description">
-                  <h2 class="option-title title">Growing Business</h2>
-                  <p class="option-text text">Приложение</p>
+                <div class="option__description">
+                  <h2 class="option__title title">Growing Business</h2>
+                  <p class="option__text text">Приложение</p>
                 </div>
               </a>
             </li>
@@ -165,10 +165,10 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="footer_conteiner">
-        <div class="address-conteiner">
-          <a class="logo-link" href="./index.html">
-            <span class="logo">Web<span class="studio-bottom">Studio</span></span></a>
+      <div class="footer__conteiner">
+        <div class="address__conteiner">
+          <a class="logo__link" href="./index.html">
+            <span class="logo">Web<span class="studio--bottom">Studio</span></span></a>
           <address>
             <ul>
               <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
@@ -177,49 +177,49 @@
             </ul>
           </address>
         </div>
-        <div class="slogan-container">
+        <div class="slogan__container">
           <p class="slogan">
             присоединяйтесь
           </p>
           <ul class="footer-social-list">
-            <li class="footer-social-list-item">
-              <a class="footer-social-list-link" href="">
-                <svg class="footer-social-icons" width="20" height="20">
+            <li class="footer-social-list__item">
+              <a class="footer-social-list__link" href="">
+                <svg class="footer-social-list__icons" width="20" height="20">
                   <use href="./Images/icons/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-list-item">
-              <a class="footer-social-list-link" href="">
-                <svg class="footer-social-icons" width="20" height="20">
+            <li class="footer-social-list__item">
+              <a class="footer-social-list__link" href="">
+                <svg class="footer-social-list__icons" width="20" height="20">
                   <use href="./Images/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-list-item">
-              <a class="footer-social-list-link" href="">
-                <svg class="footer-social-icons" width="20" height="20">
+            <li class="footer-social-list__item">
+              <a class="footer-social-list__link" href="">
+                <svg class="footer-social-list__icons" width="20" height="20">
                   <use href="./Images/icons/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-list-item">
-              <a class="footer-social-list-link" href="">
-                <svg class="footer-social-icons" width="20" height="20">
+            <li class="footer-social-list__item">
+              <a class="footer-social-list__link" href="">
+                <svg class="footer-social-list__icons" width="20" height="20">
                   <use href="./Images/icons/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div class="subsribe-conteiner">
+        <div class="subsribe__conteiner">
           <form>
-            <p class="subsribe-title">
+            <p class="subsribe__title">
               Подпишитесь на рассылку
             </p>
-            <div class="subsribe-form-conteiner">
-              <input class="subsribe-input" type="email" name="email" placeholder="E-mail">
-              <button class="subsribe-button" type="submit">Подписаться
+            <div class="subsribe-form__conteiner">
+              <input class="subsribe__input" type="email" name="email" placeholder="E-mail">
+              <button class="subsribe__button" type="submit">Подписаться
                 <svg class="icon-send">
                   <use href="./Images/icons/symbol-defs.svg#icon-send"></use>
                 </svg>
