--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet" />
-    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./css/common.min.css" />
+    <link rel="stylesheet" href="../css/index.min.css">
   </head>
   <body>
     <header>
@@ -377,6 +378,7 @@
               <use href="./Images/icons/symbol-defs.svg#close-btn"></use>
             </svg>
           </button>
+          <!-- form -->
           <p class="form__title">Оставьте свои данные, мы вам перезвоним</p>
           <form class="modal-form">
             <div class="modal-form__field">
