--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet" />
-    <link rel="stylesheet" href="./css/common.min.css" />
-    <link rel="stylesheet" href="./css/portfolio.min.css">
+    <link rel="stylesheet" href="css/common.min.css" />
+    <link rel="stylesheet" href="css/portfolio.min.css">
   </head>
   <body>
     <!-- header -->
@@ -73,7 +73,7 @@
             </li>
           </ul>
           <ul class="options-list">
-            <li class="__items">
+            <li class="option-list__items">
               <a class="option-list__link" href="">
                 <div class="image__conteiner">
                   <img class="image" src="./Images/laptop-tech-kryak.jpg" alt="laptop tech kryak" />
