--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
               info@devstudio.com
             </a>
           </li>
-          <li class="site-contact__item contact-icons">
+          <li class="site-contact__item">
             <a class="contact__link" href="tell:+380961111111">
               <svg width="10" height="16" class="site-contact__icons">
                 <use href="./Images/icons/symbol-defs.svg#smartphone"></use>
@@ -222,7 +222,7 @@
     <!-- footer -->
     <footer class="footer">
       <div class="footer__conteiner">
-        <div class="address__conteiner">
+        <div>
           <a class="logo__link" href="./index.html">
             <span class="logo">Web<span class="studio--bottom">Studio</span></span></a>
           <address>
