--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <ul class="company-description__list">
             <li class="company-description__items">
               <div class="icon__conteiner">
-                <svg width="65" height="70" class="antena">
+                <svg width="65" height="70">
                   <use href="./Images/icons/symbol-defs.svg#icon-antena"></use>
                 </svg>
               </div>
@@ -167,30 +167,30 @@
                 <h3 class="person__title title">Игорь Демьяненко</h3>
                 <p class="profession text">Product Designer</p>
                 <ul class="our-team-icon__list">
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -204,30 +204,30 @@
                 <h3 class="person__title title">Ольга Репина</h3>
                 <p class="profession text">Frontend Developer</p>
                 <ul class="our-team-icon__list">
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -241,30 +241,30 @@
                 <h3 class="person__title title">Николай Тарасов</h3>
                 <p class="profession text">Marketing</p>
                 <ul class="our-team-icon__list">
-                  <li class="our-team-icon__item">
+                  <li>
                    <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                    </a>
                   </li>
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -278,30 +278,30 @@
                 <h3 class="person__title title">Михаил Ермаков</h3>
                 <p class="profession text">UI Designer</p>
                 <ul class="our-team-icon__list">
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="our-team-icon__item">
+                  <li>
                     <a class="our-team-icon__link" href="">
-                      <svg width="20" height="20" class="social-icon-list">
+                      <svg width="20" height="20">
                         <use href="./Images/icons/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -319,49 +319,49 @@
             Постоянные клиенты
           </h2>
           <ul class="client-list">
-            <li class="client-list__item">
+            <li>
               <a class="client-list__link" href="">
-                <svg height="49.2" class="client-list__icon">
+                <svg height="49.2">
                   <use href="./Images/icons/symbol-defs.svg#icon-logo-YA-and-CO"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list__item">
+            <li>
               <!-- 2 -->
               <a class="client-list__link" href="">
-                <svg height="52" class="client-list__icon">
+                <svg height="52">
                   <use href="./Images/icons/symbol-defs.svg#icon-logo-tag-line"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list__item">
+            <li>
               <!-- 3 -->
               <a class="client-list__link" href="">
-                <svg height="42.6" class="client-list__icon">
+                <svg height="42.6">
                   <use href="./Images/icons/symbol-defs.svg#icon-logo-company"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list__item">
+            <li>
               <!-- 4 -->
               <a class="client-list__link" href="">
-                <svg height="42" class="client-list__icon">
+                <svg height="42">
                   <use href="./Images/icons/symbol-defs.svg#icon-logo-foster-peters"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list__item">
+            <li>
               <!-- 5 -->
               <a class="client-list__link" href="">
-                <svg height="47" class="client-list__icon">
+                <svg height="47">
                   <use href="./Images/icons/symbol-defs.svg#icon-logo-brand"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list__item">
+            <li>
               <!-- 6 -->
               <a class="client-list__link" href="">
-                <svg height="45.4" class="client-list__icon">
+                <svg height="45.4">
                   <use href="./Images/icons/symbol-defs.svg#icon-logo-company-tag-line"></use>
                 </svg>
               </a>
@@ -391,7 +391,7 @@
             </div>
             
             <div class="modal-form__field">
-              <label class="label" for="tel">Телефон</label>
+              <label  for="tel">Телефон</label>
               <div class="input__vraper">
                 <input class="input" type="tel" name="tel" id="tel">
                 <svg class="input__icon">
@@ -401,7 +401,7 @@
             </div>
             
             <div class="modal-form__field">
-              <label class="label" for="email">Почта</label>
+              <label  for="email">Почта</label>
               <div class="input__vraper">
                 <input class="input" type="email" name="email" id="email">
                 <svg class="input__icon">
@@ -411,7 +411,7 @@
             </div>
 
             <div class="modal-form__field">
-              <label class="label" for="comment">Комментарий</label>
+              <label  for="comment">Комментарий</label>
               <textarea class="input" name="comment" id="comment" placeholder="Введите текст"></textarea>
             </div>
 
